# rabbitsnark

./: .bazelignore  .bazelrc  .bazelrc.ci  .clang-format  .pre-commit-config.yaml  BUILD.bazel  README.md  WORKSPACE.bazel  command_runner.cc  command_runner.h  prover_main.cc  semver.bzl
.gemini/: styleguide.md
.github/: actionlint.yaml
.github/workflows/: ci.yml
bazel/: groth16_deps.bzl  rabbitsnark_deps.bzl
circom/: BUILD.bazel  command_runner_impl.h  command_runner_test.cc
circom/base/: BUILD.bazel  modulus.cc  modulus.h  modulus_unittest.cc  sections.h  sections_unittest.cc
circom/hlo/: BUILD.bazel  hlo_generator.h
circom/json/: BUILD.bazel  json_writer.cc  json_writer.h  proof_reader.h  proof_writer.h  public_reader.h  public_writer.h
circom/wtns/: BUILD.bazel  wtns.cc  wtns.h  wtns_unittest.cc
circom/zkey/: BUILD.bazel  coefficient.h  proving_key.h  verifying_key.h  zkey.cc  zkey.h  zkey_unittest.cc
common/: BUILD.bazel  command_runner_interface.cc  command_runner_interface.h  profiler.h
common/hlo/: BUILD.bazel  hlo_generator_util.h
common/json/: BUILD.bazel  json_reader.cc  json_reader.h  json_writer.cc  json_writer.h
gnark/: BUILD.bazel  babybear.h  build_defs.bzl  command_runner_impl.h  command_runner_test.cc  libsp1.h  reader_utils.cc  reader_utils.h  serde_mode.cc  serde_mode.h
gnark/go/: .bazelrc  .gitignore  BUILD.bazel  WORKSPACE.bazel  deps.bzl  gnark.go  go.mod  go.sum
gnark/go/gnark_go/: gnark.h
gnark/hlo/: BUILD.bazel  hlo_generator.h
gnark/pk/: BUILD.bazel  proving_key.h  proving_key_unittest.cc
gnark/witness/: BUILD.bazel  witness.h  witness_unittest.cc
sp1_go/: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  babybear.h  deps.bzl  go.mod  main.go
sp1_go/sp1/: BUILD.bazel  build.go  prove.go  sp1.go  test.go  utils.go  verify.go
sp1_go/sp1/babybear/: BUILD.bazel  babybear.go
sp1_go/sp1/poseidon2/: BUILD.bazel  constants.go  poseidon2.go  poseidon2_babybear.go  poseidon2_test.go  utils.go
sp1_go/sp1/trusted_setup/: BUILD.bazel  trusted_setup.go
sp1_rust/: .bazelrc  BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel
sp1_rust/src/: lib.rs
