load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@zkx//bazel:zkx_cc.bzl", "zkx_cc_binary", "zkx_cc_library")

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = ["//:all"],
)

zkx_cc_library(
    name = "command_runner",
    srcs = ["command_runner.cc"],
    hdrs = ["command_runner.h"],
    deps = [
        "//circom:command_runner_impl",
        "//gnark:command_runner_impl",
        "@com_google_absl//absl/log:globals",
        "@com_google_absl//absl/strings",
        "@zkx//xla/tsl/platform:errors",
        "@zkx//zkx/base/flag:flag_parser",
        "@zkx//zkx/base/flag:numeric_flags",
        "@zkx//zkx/math/elliptic_curves/bn/bn254:curve",
    ],
)

zkx_cc_binary(
    name = "prover_main",
    srcs = ["prover_main.cc"],
    deps = [":command_runner"],
)
