# Copyright 2025 The RabbitSNARK Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@version//:build_defs.bzl", "lastchange", "version_header")
load("@zkx//bazel:zkx_cc.bzl", "zkx_cc_binary", "zkx_cc_library")
load("//:semver.bzl", "VERSION_MAJOR", "VERSION_MINOR", "VERSION_PATCH", "VERSION_PRERELEASE")

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = ["//:all"],
)

lastchange(
    name = "lastchange",
    git_root = "//:WORKSPACE.bazel",
)

version_header(
    name = "version_generated",
    lastchange = ":lastchange",
    major = VERSION_MAJOR,
    minor = VERSION_MINOR,
    output = "version_generated.h",
    patch = VERSION_PATCH,
    prerelease = VERSION_PRERELEASE,
    project = "RABBIT_SNARK",
)

zkx_cc_library(
    name = "command_runner",
    srcs = [
        "command_runner.cc",
        ":version_generated",
    ],
    hdrs = ["command_runner.h"],
    deps = [
        "//circom:command_runner_impl",
        "//gnark:command_runner_impl",
        "@com_google_absl//absl/log:globals",
        "@com_google_absl//absl/strings",
        "@zkx//xla/tsl/platform:errors",
        "@zkx//zkx/base/flag:flag_parser",
        "@zkx//zkx/base/flag:numeric_flags",
        "@zkx//zkx/math/elliptic_curves/bn/bn254:curve",
    ],
)

zkx_cc_binary(
    name = "prover_main",
    srcs = ["prover_main.cc"],
    deps = [":command_runner"],
)
