# Copyright 2025 The RabbitSNARK Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

workspace(name = "rabbitsnark")

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "io_bazel_rules_go",
    integrity = "sha256-M6zErg9wUC20uJPJ/B3Xqb+ZjCPn/yxFF3QdQEmpdvg=",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_go/releases/download/v0.48.0/rules_go-v0.48.0.zip",
        "https://github.com/bazelbuild/rules_go/releases/download/v0.48.0/rules_go-v0.48.0.zip",
    ],
)

http_archive(
    name = "bazel_gazelle",
    integrity = "sha256-12v3pg/YsFBEQJDfooN6Tq+YKeEWVhjuNdzspcvfWNU=",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-gazelle/releases/download/v0.37.0/bazel-gazelle-v0.37.0.tar.gz",
        "https://github.com/bazelbuild/bazel-gazelle/releases/download/v0.37.0/bazel-gazelle-v0.37.0.tar.gz",
    ],
)

load("//bazel:rabbitsnark_deps.bzl", "rabbitsnark_deps")

rabbitsnark_deps()

load("@zkx//bazel:zkx_deps.bzl", "zkx_deps")

zkx_deps()

load("@zkx//bazel:zkx_deps2.bzl", "zkx_deps2")

zkx_deps2()

# NOTE(chokobole): Comment out the line below — it seems that `go_dependencies()`
# doesn't work, possibly due to a conflict with `grpc_extra_deps()` inside `zkx_deps3()`.
# load("@zkx//bazel:zkx_deps3.bzl", "zkx_deps3")
load("@com_google_protobuf//:protobuf_deps.bzl", "protobuf_deps")
load("@rules_python//python:repositories.bzl", "py_repositories")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
http_archive(
    name = "hedron_compile_commands",
    strip_prefix = "bazel-compile-commands-extractor-ed994039a951b736091776d677f324b3903ef939",
    url = "https://github.com/hedronvision/bazel-compile-commands-extractor/archive/ed994039a951b736091776d677f324b3903ef939.tar.gz",
)

load("@hedron_compile_commands//:workspace_setup.bzl", "hedron_compile_commands_setup")

hedron_compile_commands_setup()

py_repositories()

protobuf_deps()

load("@bazel_gazelle//:deps.bzl", "gazelle_dependencies")
load("@io_bazel_rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")

local_repository(
    name = "gnark_go",
    path = "gnark/go",
)

load("@gnark_go//:deps.bzl", "go_dependencies")

go_dependencies()

go_rules_dependencies()

go_register_toolchains(version = "1.23.5")

gazelle_dependencies(go_repository_default_config = "//:WORKSPACE.bazel")

VERSION_COMMIT = "628481ed998e2231479ba43f7ed7d67ed3fdb534"

http_archive(
    name = "version",
    sha256 = "65d8fdbe3894491a68363d24fbd99ef4e342133049feccd1ef47f96253b5f6a6",
    strip_prefix = "version-{commit}".format(commit = VERSION_COMMIT),
    url = "https://github.com/fractalyze/version/archive/{commit}.tar.gz".format(commit = VERSION_COMMIT),
)
