# Copyright 2025 The RabbitSNARK Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@zkx//bazel:zkx_cc.bzl", "zkx_cc_library")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "command_runner_interface",
    srcs = ["command_runner_interface.cc"],
    hdrs = ["command_runner_interface.h"],
    deps = [
        "@com_google_absl//absl/status",
        "@zkx//xla/tsl/platform:env",
        "@zkx//xla/tsl/platform:path",
        "@zkx//zkx:literal",
        "@zkx//zkx:primitive_util",
        "@zkx//zkx/service:hlo_runner",
        "@zkx//zkx/service:platform_util",
        "@zkx//zkx/service/cpu:cpu_compiler_registerer",
        "@zkx//zkx/service/cpu:cpu_transfer_manager",
        "@zkx//zkx/stream_executor/host:host_platform",
    ],
)

zkx_cc_library(
    name = "profiler",
    hdrs = ["profiler.h"],
    deps = ["@com_google_absl//absl/time"],
)
