# Copyright 2025 The RabbitSNARK Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@zkx//bazel:zkx_cc.bzl", "zkx_cc_library", "zkx_cc_unittest")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "modulus",
    srcs = ["modulus.cc"],
    hdrs = ["modulus.h"],
    deps = [
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log:check",
        "@zkx//xla/tsl/platform:errors",
        "@zkx//zkx/base/buffer:read_only_buffer",
        "@zkx//zkx/math/base:big_int",
    ],
)

zkx_cc_library(
    name = "sections",
    hdrs = ["sections.h"],
    deps = [
        "@com_google_absl//absl/strings",
        "@zkx//xla/tsl/platform:errors",
        "@zkx//zkx/base:logging",
        "@zkx//zkx/base/buffer:read_only_buffer",
    ],
)

zkx_cc_unittest(
    name = "base_unittests",
    srcs = [
        "modulus_unittest.cc",
        "sections_unittest.cc",
    ],
    deps = [
        ":modulus",
        ":sections",
        "@zkx//zkx/base/buffer:serde",
        "@zkx//zkx/base/buffer:vector_buffer",
        "@zkx//zkx/math/elliptic_curves/bn/bn254:g1",
    ],
)
