load("@zkx//bazel:zkx_cc.bzl", "zkx_cc_library")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "hlo_generator",
    hdrs = ["hlo_generator.h"],
    deps = [
        "//circom/zkey",
        "//common/hlo:hlo_generator_util",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/strings",
        "@zkx//xla/tsl/platform:env",
        "@zkx//xla/tsl/platform:path",
        "@zkx//zkx/math/poly:bit_reverse",
    ],
)
