load("@zkx//bazel:zkx_cc.bzl", "zkx_cc_library")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "json_writer",
    srcs = ["json_writer.cc"],
    hdrs = ["json_writer.h"],
    deps = [
        "@com_github_tencent_rapidjson//:rapidjson",
        "@com_google_absl//absl/status",
        "@zkx//xla/tsl/platform:env",
    ],
)

zkx_cc_library(
    name = "proof_writer",
    hdrs = ["proof_writer.h"],
    deps = [
        ":json_writer",
        "@com_github_tencent_rapidjson//:rapidjson",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status",
        "@zkx//zkx:literal",
        "@zkx//zkx/math/elliptic_curves/bn/bn254:curve",
        "@zkx//zkx/math/geometry:point_declarations",
    ],
)

zkx_cc_library(
    name = "public_writer",
    hdrs = ["public_writer.h"],
    deps = [
        ":json_writer",
        "@com_github_tencent_rapidjson//:rapidjson",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/types:span",
    ],
)
