load("@zkx//bazel:zkx_cc.bzl", "zkx_cc_library")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "proof_writer",
    hdrs = ["proof_writer.h"],
    deps = [
        "//common/json:json_writer",
        "@com_github_tencent_rapidjson//:rapidjson",
        "@com_google_absl//absl/status",
        "@zkx//zkx:literal",
        "@zkx//zkx/math/geometry:point_declarations",
    ],
)

zkx_cc_library(
    name = "public_writer",
    hdrs = ["public_writer.h"],
    deps = [
        "//common/json:json_writer",
        "@com_github_tencent_rapidjson//:rapidjson",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/types:span",
    ],
)
