# Copyright 2025 The RabbitSNARK Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@zkx//bazel:zkx_cc.bzl", "zkx_cc_library")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "proof_reader",
    hdrs = ["proof_reader.h"],
    deps = [
        "//common/json:json_reader",
        "@com_github_tencent_rapidjson//:rapidjson",
        "@com_google_absl//absl/status:statusor",
        "@zkx//xla/tsl/platform:statusor",
        "@zkx//zkx:literal",
        "@zkx//zkx:literal_util",
    ],
)

zkx_cc_library(
    name = "proof_writer",
    hdrs = ["proof_writer.h"],
    deps = [
        "//common/json:json_writer",
        "@com_github_tencent_rapidjson//:rapidjson",
        "@com_google_absl//absl/status",
        "@zkx//zkx:literal",
        "@zkx//zkx/math/geometry:point_declarations",
    ],
)

zkx_cc_library(
    name = "public_reader",
    hdrs = ["public_reader.h"],
    deps = [
        "//common/json:json_reader",
        "@com_github_tencent_rapidjson//:rapidjson",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/types:span",
        "@zkx//xla/tsl/platform:statusor",
        "@zkx//zkx:literal",
        "@zkx//zkx:literal_util",
    ],
)

zkx_cc_library(
    name = "public_writer",
    hdrs = ["public_writer.h"],
    deps = [
        "//common/json:json_writer",
        "@com_github_tencent_rapidjson//:rapidjson",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/types:span",
    ],
)
