# Copyright 2025 The RabbitSNARK Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_cc//cc:defs.bzl", "cc_import")

# gazelle:prefix github.com/fractalyze/rabbitsnark/gnark/go
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

go_library(
    name = "gnark",
    srcs = ["gnark.go"],
    cgo = True,
    importpath = "github.com/fractalyze/rabbitsnark/gnark/go",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_consensys_gnark//backend",
        "@com_github_consensys_gnark//backend/groth16",
        "@com_github_consensys_gnark//backend/groth16/bn254",
        "@com_github_consensys_gnark//backend/witness",
        "@com_github_consensys_gnark//constraint",
        "@com_github_consensys_gnark//constraint/bn254",
        "@com_github_consensys_gnark//constraint/solver",
        "@com_github_consensys_gnark//frontend/cs",
        "@com_github_consensys_gnark_crypto//ecc",
        "@com_github_consensys_gnark_crypto//ecc/bn254",
        "@com_github_consensys_gnark_crypto//ecc/bn254/fr",
        "@com_github_consensys_gnark_crypto//ecc/bn254/fr/hash_to_field",
    ],
)

go_binary(
    name = "libgnark",
    embed = [":gnark"],
    gc_linkopts = ["-buildmode=c-shared"],
    linkmode = "c-shared",
    visibility = ["//visibility:public"],
)

cc_import(
    name = "gnark_cc",
    hdrs = ["gnark_go/gnark.h"],
    includes = ["."],
    shared_library = ":libgnark",
    visibility = ["//visibility:public"],
)
